# codex-linux

codex-rs/: Cargo.toml
codex-rs/agent-backend/: Cargo.toml
codex-rs/agent-backend-conformance/: Cargo.toml  README.md
codex-rs/agent-backend-conformance/scenarios/: 01_file_edit_round_trip.toml  02_bash_exec_with_approval.toml  03_plan_turn.toml  04_web_search_refusal.toml  05_approval_round_trip.toml  06_interrupt_mid_stream.toml  07_large_markdown_reply.toml  08_attachment_upload.toml  09_network_disabled_run.toml  10_sandbox_violation_recovery.toml
codex-rs/agent-backend-conformance/src/: fixture.rs  lib.rs  runner.rs
codex-rs/agent-backend/src/: capabilities.rs  codex.rs  envelope.rs  error.rs  lib.rs  process.rs  registry.rs  types.rs
codex-rs/agent-backend/tests/: codex_loopback.rs
codex-rs/claude-backend/: Cargo.toml
codex-rs/claude-backend/src/: lib.rs
codex-rs/cli/src/: main.rs
codex-rs/cli/src/desktop_app/: linux.rs  mod.rs
codex-rs/content-search/: Cargo.toml
codex-rs/content-search/src/: lib.rs  matcher.rs  session.rs
codex-rs/desktop/: Cargo.toml  README.md
codex-rs/desktop/packaging/: AppRun  build-appimage.sh  dev.codex.Desktop.desktop  dev.codex.Desktop.metainfo.xml
codex-rs/desktop/packaging/debian/: postinst  postrm
codex-rs/desktop/packaging/flatpak/: build-flatpak.sh  dev.codex.Desktop.yml
codex-rs/desktop/packaging/symlinks/: codex-agent  codex-lspd
codex-rs/desktop/src/: agent_bridge.rs  agent_role.rs  gui.rs  lib.rs  lspd_role.rs  main.rs  md_to_widgets.rs  portal.rs  role.rs  run.rs  wal.rs
codex-rs/desktop/src/gui/: app.rs  chat_pane.rs  command_palette.rs  editor_pane.rs  mod.rs  sidebar.rs  theme.rs
codex-rs/desktop/tests/: agent_bridge_restart.rs  agent_bridge_smoke.rs
codex-rs/drift-log/: Cargo.toml
codex-rs/drift-log/src/: lib.rs
codex-rs/jsonrpc-framing/: Cargo.toml
codex-rs/jsonrpc-framing/src/: lib.rs
codex-rs/markdown-ast/: Cargo.toml
codex-rs/markdown-ast/src/: ast.rs  incremental.rs  inline.rs  lib.rs  parser.rs
codex-rs/markdown-ast/tests/: incremental.rs
codex-rs/markdown-ast/tests/fixtures/: large.md
docs/: desktop-architecture.md  desktop-handoff.md  install.md
