[package]
name = "codex-agent-backend-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_agent_backend_conformance"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-agent-backend = { workspace = true }
futures = { workspace = true, default-features = false, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
