[package]
name = "codex-agent-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_agent_backend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true, default-features = false, features = ["std"] }
inventory = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
