[package]
name = "codex-claude-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_claude_backend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-agent-backend = { workspace = true }
codex-jsonrpc-framing = { workspace = true }
futures = { workspace = true, default-features = false, features = ["std"] }
inventory = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "io-util"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "io-util", "time"] }
