[package]
name = "codex-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-desktop"
path = "src/main.rs"

[lib]
name = "codex_desktop"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
# Enables the actual GTK4 + libadwaita + GtkSourceView 5 GUI. OFF by default
# so the workspace builds in environments without GTK development headers
# (CI that lacks libgtk-4-dev / libadwaita-1-dev). The Linux distribution
# packages (.deb, AppImage, Flatpak) all build with `--features gtk`.
gtk = ["dep:gtk4", "dep:libadwaita", "dep:sourceview5"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-agent-backend = { path = "../agent-backend" }
codex-jsonrpc-framing = { path = "../jsonrpc-framing" }
codex-markdown-ast = { path = "../markdown-ast" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "io-std", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

# GTK stack — optional, gated by the `gtk` feature.
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true }
sourceview5 = { version = "0.9", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
