[package]
name = "codex-drift-log"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_drift_log"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
