[package]
name = "codex-jsonrpc-framing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_jsonrpc_framing"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt", "test-util"] }
pretty_assertions = { workspace = true }
